# ImageBarch

./: CMakeLists.txt  Main.qml  MessageBox.qml  barchlib.cpp  barchlib.h  imagefilesmodel.cpp  imagefilesmodel.h  main.cpp
